--- a/generate_piano_music.ipynb
+++ b/generate_piano_music.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNVtp+fm7g/Bjmq216buzSv",
+      "authorship_tag": "ABX9TyMT5gtmJbVKWXVa3vEu/2Fl",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -27,13 +27,35 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "**Getting dataset**"
+      ],
+      "metadata": {
+        "id": "maDC8Ct51y05"
+      }
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
         "id": "F57ivhN3QowE"
       },
       "outputs": [],
-      "source": []
+      "source": [
+        "!wget https://storage.googleapis.com/magentadata/datasets/maestro/v1.0.0/maestro-v1.0.0-midi.zip"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!unzip maestro-v1.0.0-midi.zip"
+      ],
+      "metadata": {
+        "id": "9yNPJnyh2Hag"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
